[project]
name = "encant"
description = "Uber simple python version management"
authors = [
    { name = "Aaron Glover", email = "aglove2189@gmail.com" }
]
readme = "README.md"
dynamic = ["version"]
dependencies = ["requests"]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "black==23.9.1",
    "ruff==0.0.292",
]

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project.scripts]
encant = "encant:cli"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
